--- a/family.html
+++ b/family.html
@@ -32,8 +32,8 @@
 	<div class="navigation-menu">
 	<ul>
 		<li> <a href="blog.html">welcome</a></li>
-		<li> <a href="about.htm">  about</a> </li>
-		<li> <a href="gallery.htm">gallery</a></li>
+		<li> <a href="about.html">  about</a> </li>
+		<li> <a href="gallery.html">gallery</a></li>
 		<li> <a href="family.html"class="active"> family</a></li>
 		</ul>
 	</div>
