--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		<title> Agnes's World </title>
 
 		<link rel="stylesheet" href="css/standard_style.css">
-		<link rel="stylesheet" href="css/navigation_style.css">
-		<link rel="stylesheet" href="css/about_style.css">
+		<link rel="stylesheet" href="css/navigation.css">
+		<link rel="stylesheet" href="css/about.css">
 		
     </head>
 
