--- a/gallery.html
+++ b/gallery.html
@@ -15,13 +15,12 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.jd/1.14.3/umd/popper.min.js"></script>
-    <script src="https://maxcdn.boorstrapcdn.com/bootstrap/4.1.3/js.bootstrap.min.js"></script>
 
 	<ul>
-		<li> <a href="blog.htm">welcome</a></li>
-		<li> <a href="about.htm">  about</a> </li>
+		<li> <a href="blog.html">welcome</a></li>
+		<li> <a href="about.html">  about</a> </li>
 		<li> <a href="gallery.html"class="active">gallery</a></li>
-        <li> <a href="family.htm">family</a></li>
+        <li> <a href="family.html">family</a></li>
 	</ul>
 	</div>
 	<br>
