--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
+	
 	<head>
 		<!-- Meta tags required by Bootstrap -->
 		<meta charset="utf-8">
@@ -19,79 +19,34 @@
 
 		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-				        
-		<title> Agnes's World </title>
 
-		<link rel="stylesheet" href="css/standard_style.css">
+		<title>endangered animals</title>
+
+		<link rel="stylesheet" href="css/wd13.css">
 		<link rel="stylesheet" href="css/navigation.css">
-		<link rel="stylesheet" href="css/about.css">
-		
+
     </head>
 
-    <body background="img/bg/about_bg.jpg">
-		<h1 class="main-title"> Agnes Amanda Gru </h1>
-		
-		<div class="navigation-menu">
-			<ul>
-				<li> <a href="welcome.html"> Welcome </a> </li>
-				<li> <a href="about.html" class="active"> About </a> </li>
-				<li> <a href="gallery.html"> Gallery </a> </li>
-				<li> <a href="family.html"> Family </a> </li>
-			</ul>
-		</div>
-		
-		<br>
-			
-		<div class="jumbotron">
-			<h1> Celebrate Life with Agnes </h1>
 
-            <img src="img/pusheen/pusheen_jumbo1.png" height=200px>
-            <img src="img/pusheen/pusheen_jumbo2.png" height=200px>
-            <img src="img/pusheen/pusheen_jumbo3.png" height=200px>
-            <img src="img/pusheen/pusheen_jumbo4.png" height=200px>
-            
-			<p> What better way to spend your afternoon than to get to know me better? Unicorns are so fluffy! </p>
-		</div>
-		
-		</br>
-		
-		<div class="text-body">
-		
-		<h2> <button data-toggle="collapse" data-target="#Appearance-body" class="btn btn-info btn-lg"> Appearance </button>  </h2>
-		<div id="Appearance-body" class="collapse">
-		<p> I'm a little girl with dark brown eyes. My long black hair is tied in an upwards ponytail with a red scrunchie. 
-			Most of the time, I wear blue overalls over a yellow and brown striped t-shirt, and white sneakers with yellow socks.
-			I also wear a white ballet outfit like Edith and Margo (at the ballet recital). For pajamas, I wear a long blue nightshirt
-			covered with teddy bears and polar bear slippers; my hair stays the same. On my birthday, I wear a dress that resembles a 
-			princess riding a unicorn. The colors are similar to my regular outfit. I also wear a blue princess hat on my head. </p>
-		</div>
-			
-		<h2><button data-toggle="collapse" data-target="#Personality-body" class="btn btn-info btn-lg">  Personality </button>  </h2>
-		<div id="Personality-body" class="collapse"> </h2>
-		<p> Like my sisters, I wished to be adopted by someone who cared about me. At first, I am the only one out of us to be excited to be
-			adopted by Gru. I happily hugged his leg and played games with him, while my sisters are gawking at Gru, their dream of the
-			'perfect parents' in tatters. I am unaware of Gru's own dislike of the whole adoption, my innocence prevailing. I am a very naïve
-			and innocent child, which is why Margo is so protective of me. I think Gru's "dog" is cute and chase after him, despite some protest from Margo. </p> 
-			
-		<p> I trusted Gru deeply even though he was, at first, rather cold towards me and my sisters, asking to hold his hand and for him to read me stories. 
-			When Gru begins to become more of a parental figure to us, my trust in him deepens more. I am the main reason Gru begins to change his ways, 
-			my unconditional adoration of him regardless of how he treats me makes him realise what life is really about. I unwittingly set
-			his change in motion after Gru defends me at the Space Killer blaster game at the amusement park after the attendant mocks me for not
-			winning the game which upsets me, and him — "Better luck next time" "OK, my turn". I am very good at ballet, better than Edith and
-			almost as good as Margo, but lacking her poise. </p>
+    <body background="img/nature.jpg">
 
-		<p> I am not a needy child but do depend on my older sister, Edith, a lot. I often look worried if Edith walks off ahead of me
-			and run after Edith, not wanting to be left behind. I also demand Gru fixes my disintegrated toy unicorn, and when I am upset
-			at being mocked by the amusement park game-booth attendant, I look to Gru with teary eyes for support. When I don't get my way,
-			I hold her breath until I do get my way and when I still don't get my way by the time I open my eyes, I pretend to faint, and Margo
-			implies I have done this numerous times before. </p>
+    	<h1>endangered snow leopard</h1>
 
-		<p> I have a huge love of candy, wishing my new parents to have a gummy bear house, and happily eat out of the pet food bowl Gru filled
-			with candy. I also love fluffy things for example I called Kyle, Gru's "dog", a fluffy doggie. I am very notable for my strange obsession
-			with unicorns and wanted to have one for a pet, unaware of the fact that they are mythical creatures. </p> </div>
-		
-		</div>
-    </body>
+    	<div class="navigation-menu">
+    	<ul>
+    	  <li> <a href="project-template.html" class="active">why? </a></li>
+    	  <li> <a href="about.html">How?</a> </li>
+    	</ul>
+    	</div>
 
+    	<br>
+
+    	<p>This website is made to tell you why the snow leopard is endangered and how to help them.</p>
+    	<h2>why are snow leopards endangered?</h2>
+    	<p>The first reason is that the bones, skin and organs of large cats are valuable in traditional Asian medicine.The second reason is because humans  pushed  further with their livestock into the snow leopard’s habitat.Damaging the fragile mountain grasslands, leaving less food for the wild sheep and goats that are the snow leopard’s main prey.  
+    	</p>
+    	<td> <img class="animate-1" src="img/snow1.jpg" width="400px"> </td>
+    	<td> <img class="animate-2" src="img/snow2.png" width="400px"> </td>
+</body>
 </html>
 
