--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     	<div class="navigation-menu">
     	<ul>
-    	  <li> <a href="project-template.html" class="active">why? </a></li>
+    	  <li> <a href="index.html" class="active">why? </a></li>
     	  <li> <a href="about.html">How?</a> </li>
     	</ul>
     	</div>
