--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
     	<div class="navigation-menu">
     	<ul>
-    	  <li> <a href="project-template.html" >why? </a></li>
+    	  <li> <a href="index.html" >why? </a></li>
     	  <li> <a href="about.html"class="active">How?</a> </li>
     	</ul>
     	</div>
