--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
     	  <li> <a href="about.html">How?</a> </li>
     	</ul>
     	</div>
+    	<div class="alert alert-info alert-dismissible">
+    		 <button type="button" class="close" data-dismiss="alert">&times;</button>
+    		This site was created by me.
+    	</div>
 
     	<br>
 
